* synfr - get synonyms for a french word
* webpoll - displays a graph illustrating the timings of the objects on a web page (from Dean Wilson)
* dg - GoDaddy DynaGen Domain Search; finds intelligent variations of domain names given a word (from Glenn Carr)
* mysimon - MySimon price comparison engine
* dhl - Track DHL packages
* usps - Track USPS packages
* abex - Track Airborne Express packages

Modified Searches

* setiq - yet another cosmetic change (use of <div> rather than <a>)
* yg - Added /number switch for jumping directly to a message number in the archive

Enhancements

* pagetemplate preference - set to "maximized.htm" to maximize results window; or set to any HTML
  page that sets up the browser window the way you want it for your results. 

Bug Fixes

* 


-- What's new for 3.1.3 (September 9, 2002)

Bug Fixes

* aliases.txt - corrected 2 aliases to reflect the change of searches names that occured in v 3.1.1

-- What's new for 3.1.2 (September 8, 2002)

Modified Searches
* bible - renamed to bg (Bible Gateway) to avoid English word "Bible"

Enhancements
* Installer fixed to delete old names for *.xml searches.
* Gg bug fixed where /directory would "stick" and apply to the next gg search.

-- What's new for 3.1.1 beta (September 6, 2002)

New Searches

* walmart - Search WalMart online.
* iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
* sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
* encarta - Microsoft Encarta (from Andrew Carpenter)
* ep - Epinions (from Andrew Carpenter)
* wc - Get the time around the world at timeanddate.com (from John Bairen)
* jsexec - Execute a Javascript command
* jsref - Search for Javascript commands reference

Modified Searches

* bible - David Thompson added switches for multiple translations
* msk - added /google switch
* setiq - cosmetic change
* wfb - standardized layout
* short - renamed to msl to avoid English word "short"